# sean

./: befunge93.rs  bf.cpp  bytequeuequestion.c  chip8.cpp  fractal.c  hashassignment.cpp  hexsweeper.c  hlight.cpp  lc3.c  markov.d  montyhall.cpp  painter.py  spacefillingcurve.py  tiny.hs  wildcard.rs
aoc23/1/: trebuchet.ml
aoc23/10/: pipemaze.ml
aoc23/4/: scratchcards.ml
aoc23/6/: test.py
aoc23/7/: cards.ml
assembly/: r13.asm
assembly/bfx86/: Makefile  bf.s
automata/: Makefile  core.h  main.c
bfx86/: hello  info.c
birdcage/: Makefile
birdcage/Ex/: Boolean.bc  Test.bc
birdcage/Src/: Exp.hs  Fnc.hs  Main.hs  Prs.hs  Rntm.hs
c/: ppm_video.c
c++/flocking/: Makefile  flock.cpp  flock.hpp  vec.hpp
c++/verlet/: Makefile  camera.cpp  camera.h  opengl_objects.h
clicalc/: Cargo.toml
combinatorcalc/: main.py  tree.py
compress/: compress.cpp  test.sh
flocking/: main.cpp
fluid/: Cargo.toml  README.md
hissp/: factorial.py
hwprng/: Tb.v
nco/: makefile
nvim/: init.lua
painter/: painter.py
posconverter/: index.html  script.js
python/: filetokeystrokes.py  spacefillingcurve.py
rust/: tree.rs
rust/gpumandelbrot/: Cargo.toml
shaderenv/: Makefile
sloc/: comments.json  sloc.py
termimage/: 256.json  termimage.py
terminalsoftwarerender/: main.py  screen.py  triangle.py
uart/: BaudRateCounter.v  Main.v  Receiver.v  Transmitter.v  main.cpp
verlet/: basic_frag.glsl  basic_vert.glsl  ground_frag.glsl  ground_vert.glsl  main.cpp  opengl_objects.cpp  prog  verlet_system.cpp  verlet_system.h
xsr/: Makefile  Splitmix.v  Xsr.v  tb
(+30 files in other folders)
