[package]
name = "gpumandelbrot"
version = "0.1.0"
authors = ["sn"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.41"
luminance = "0.43"
luminance-derive = "0.6"
luminance-front = "0.3"
luminance-glfw = "0.15"
luminance-windowing = "0.9"
